[gd_scene load_steps=6 format=3 uid="uid://wpvg3jtdwm8e"]

[ext_resource type="Texture2D" uid="uid://do54y3trnon1h" path="res://Assets/Sprites/tile.png" id="1_tldr7"]
[ext_resource type="Script" path="res://Scenes/tile.gd" id="1_xhsx3"]
[ext_resource type="Texture2D" uid="uid://b1s84046nh355" path="res://Assets/Sprites/move_tile.png" id="3_4odg2"]
[ext_resource type="Texture2D" uid="uid://47wtvrk061d7" path="res://Assets/Sprites/attack_tile.png" id="4_5mfh6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gaf84"]
size = Vector2(22, 22)

[node name="tile" type="Node2D"]
script = ExtResource("1_xhsx3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_tldr7")

[node name="Area2D" type="Area2D" parent="."]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_gaf84")

[node name="Move_Sprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_4odg2")

[node name="Attack_Sprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_5mfh6")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
